# Zyntherix

client/: package-lock.json
server/: .gitignore  Cargo.toml
server/src/: db.rs  main.rs  routes.rs
server/src/controller/: auth_controller.rs  user_controller.rs
server/src/middleware/: auth_middleware.rs
server/src/models/: auth.rs  finance.rs  goal.rs  habit.rs  meal.rs  mod.rs  mood_log.rs  physical_data.rs  profile.rs  sleep_log.rs  task.rs  user.rs  workout.rs
server/src/repository/: user_repo.rs
server/src/service/: auth_service.rs  user_service.rs
